small fix for course-picture-small on iphone

--- a/meineWebseite.css
+++ b/meineWebseite.css
@@ -293,6 +293,11 @@ li {
 		border-width: 4px;
 	}
 
+	.course-picture-small {
+		width: 20%;
+		float: none;
+	}
+
 	.course-text {
 		width: 100%;
 	}
